# cg_selenia_city

./: .gitignore  README.md  TODO
python_solution/: main.py  pyproject.toml
rust_solution/src/: delaunator.rs  game.rs  loader.rs  main.rs  point.rs  utils.rs
rust_solution/src/game/: game_state.rs  mod.rs  module.rs  pod.rs  point.rs  tube.rs
